tests/baselines/reference/letDeclarations2.errors.txt
tests/cases/compiler/letDeclarations2.ts(4,5): error TS1158: Only var declarations can be exported.


==== tests/cases/compiler/letDeclarations2.ts (1 errors) ====
    
    module M {
        let l1 = "s";
        export let l2 = 0;
        ~~~~~~~~~~~~~~~~~~
!!! error TS1158: Only var declarations can be exported.
    }